test/types/string/bradc/substring/substringBadRange.good
substringBadRange.chpl:3: error: Accessing string out-of-bounds
