test/types/string/bradc/substring/substringBadRange.future
semantic: out of bounds substrings?

Should out of bounds substrings be flagged as out-of-bounds errors
or just be quietly ignored?
